# lumedb

./: .gitignore  Cargo.toml  DEVELOPER_GUIDE.md  Dockerfile  LEARNING_LUMEDB.md  README.md  demo.sh  docker-compose.yml  setup-lumedb.sh
docs/: CNAME  index.html  learn.html  style.css
lumedb-studio/: package-lock.json  package.json
lumedb-studio/src/app/: globals.css  page.tsx
lumedb-studio/src/app/api/query/: route.ts
scratch/: test_hnsw.rs
src/: auth.rs  cli.rs  document.rs  engine.rs  error.rs  index.rs  lib.rs  main.rs  query.rs  server.rs  transaction.rs  vector.rs  wal.rs
src/storage/: memtable.rs  mod.rs  sstable.rs
website/: index.html
