[package]
name = "lumedb"
version = "0.1.0"
edition = "2021"
description = "A high-performance AI-native NoSQL document database"
authors = ["LumeDB Team"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
bincode = "1.3"
lz4_flex = "0.11"
parking_lot = "0.12"
crc32fast = "1.3"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
bloomfilter = "1.0"
byteorder = "1.4"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
clap = { version = "4.0", features = ["derive"] }
colored = "2.0"
rustyline = "12.0"
tracing = "0.1"
tracing-subscriber = "0.3"

[[bin]]
name = "lumedb-server"
path = "src/main.rs"

[[bin]]
name = "lume-cli"
path = "src/cli.rs"
